// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auto createLabels should create the labels 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "changelogTitle": "💥 Breaking Change",
          "color": "#C5000B",
          "description": "Increment the major version when merged",
          "name": "Version: Major",
          "overwrite": true,
          "releaseType": "major",
        },
        Object {
          "changelogTitle": "🐛 Bug Fix",
          "color": "#870048",
          "description": "Increment the patch version when merged",
          "name": "Version: Patch",
          "overwrite": true,
          "releaseType": "patch",
        },
        Object {
          "changelogTitle": "🚀 Enhancement",
          "color": "#F1A60E",
          "description": "Increment the minor version when merged",
          "name": "Version: Minor",
          "overwrite": true,
          "releaseType": "minor",
        },
        Object {
          "color": "#bf5416",
          "description": "Preserve the current version when merged",
          "name": "skip-release",
          "releaseType": "skip",
        },
        Object {
          "color": "#007f70",
          "description": "Create a release when this pr is merged",
          "name": "release",
          "releaseType": "release",
        },
        Object {
          "changelogTitle": "🏠 Internal",
          "color": "#696969",
          "description": "Changes only affect the internal API",
          "name": "internal",
          "releaseType": "none",
        },
        Object {
          "changelogTitle": "📝 Documentation",
          "color": "#cfd3d7",
          "description": "Changes only affect the documentation",
          "name": "documentation",
          "releaseType": "none",
        },
        Object {
          "changelogTitle": "🧪 Tests",
          "color": "#ffd3cc",
          "description": "Add or improve existing tests",
          "name": "tests",
          "releaseType": "none",
        },
        Object {
          "changelogTitle": "🔩 Dependency Updates",
          "color": "#8732bc",
          "description": "Update one or more dependencies version",
          "name": "dependencies",
          "releaseType": "none",
        },
        Object {
          "color": "#ffef00",
          "description": "Create a canary release on updates to this PR",
          "name": "canary",
          "releaseType": "none",
        },
      ],
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Auto should extend config 1`] = `
Object {
  "baseBranch": "main",
  "extends": "@artsy/auto-config/package.json",
  "labels": Array [
    Object {
      "changelogTitle": "💥 Breaking Change",
      "color": "#C5000B",
      "description": "Increment the major version when merged",
      "name": "major",
      "releaseType": "major",
    },
    Object {
      "changelogTitle": "🚀 Enhancement",
      "color": "#F1A60E",
      "description": "Increment the minor version when merged",
      "name": "minor",
      "releaseType": "minor",
    },
    Object {
      "changelogTitle": "🐛 Bug Fix",
      "color": "#870048",
      "description": "Increment the patch version when merged",
      "name": "patch",
      "releaseType": "patch",
    },
    Object {
      "color": "#bf5416",
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "releaseType": "skip",
    },
    Object {
      "color": "#007f70",
      "description": "Create a release when this pr is merged",
      "name": "release",
      "releaseType": "release",
    },
    Object {
      "changelogTitle": "🏠 Internal",
      "color": "#696969",
      "description": "Changes only affect the internal API",
      "name": "internal",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "📝 Documentation",
      "color": "#cfd3d7",
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "🧪 Tests",
      "color": "#ffd3cc",
      "description": "Add or improve existing tests",
      "name": "tests",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "🔩 Dependency Updates",
      "color": "#8732bc",
      "description": "Update one or more dependencies version",
      "name": "dependencies",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "🏎 Performance",
      "color": "#f4b2d8",
      "description": "Improve performance of an existing feature",
      "name": "performance",
      "releaseType": "patch",
    },
    Object {
      "color": "#ffef00",
      "description": "Create a canary release on updates to this PR",
      "name": "canary",
      "releaseType": "none",
    },
  ],
  "onlyPublishWithReleaseLabel": true,
  "owner": "foo",
  "plugins": Array [
    "npm",
  ],
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "versionBranches": undefined,
}
`;

exports[`Auto should extend local config 1`] = `
Object {
  "baseBranch": "main",
  "extends": "<PROJECT_ROOT>fake.json",
  "labels": Array [
    Object {
      "changelogTitle": "💥 Breaking Change",
      "color": "#C5000B",
      "description": "Increment the major version when merged",
      "name": "major",
      "releaseType": "major",
    },
    Object {
      "changelogTitle": "🚀 Enhancement",
      "color": "#F1A60E",
      "description": "Increment the minor version when merged",
      "name": "minor",
      "releaseType": "minor",
    },
    Object {
      "changelogTitle": "🐛 Bug Fix",
      "color": "#870048",
      "description": "Increment the patch version when merged",
      "name": "patch",
      "releaseType": "patch",
    },
    Object {
      "color": "#bf5416",
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "releaseType": "skip",
    },
    Object {
      "color": "#007f70",
      "description": "Create a release when this pr is merged",
      "name": "release",
      "releaseType": "release",
    },
    Object {
      "changelogTitle": "🏠 Internal",
      "color": "#696969",
      "description": "Changes only affect the internal API",
      "name": "internal",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "📝 Documentation",
      "color": "#cfd3d7",
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "🧪 Tests",
      "color": "#ffd3cc",
      "description": "Add or improve existing tests",
      "name": "tests",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "🔩 Dependency Updates",
      "color": "#8732bc",
      "description": "Update one or more dependencies version",
      "name": "dependencies",
      "releaseType": "none",
    },
    Object {
      "changelogTitle": "🏎 Performance",
      "color": "#f4b2d8",
      "description": "Improve performance of an existing feature",
      "name": "performance",
      "releaseType": "patch",
    },
    Object {
      "color": "#ffef00",
      "description": "Create a canary release on updates to this PR",
      "name": "canary",
      "releaseType": "none",
    },
  ],
  "noVersionPrefix": true,
  "owner": "foo",
  "plugins": Array [
    "npm",
  ],
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "versionBranches": undefined,
}
`;
